apps/core/static/scss/_header.scss
.header {
    width: 100%;

    position: fixed;
    top: 0;
    z-index: 3;
}

.header__link {
    text-decoration: none;
    font-size: 1.8rem;
    text-align: center;
    padding: 0.25em 0.5em;

    @include media-breakpoint-up(sm) {
        text-align: left;
        font-size: inherit;
        padding: 0.5em 1em;
    }
}

.header__brand {
    text-decoration: none;

    @include media-breakpoint-up(sm) {
        position: absolute;
        left: 1.7em;
        z-index: 1;
    }
}

.header__brand-label {
    height: 1em;
}

.header__brand-canvas {
    vertical-align: bottom;
}

.header__menu {
    justify-content: center;

    @include media-breakpoint-only(xs) {
        &:after {
            content: "";
            display: block;

            position: fixed;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            z-index: -1;

            background: rgba($body-bg, 0.9);
        }
    }
}

.header__menu-list {
    height: 85vh;
    justify-content: center;

    transition: opacity $transition-duration;

    @include media-breakpoint-up(sm) {
        height: auto;

        &:after {
            content: "";
            display: block;
            height: 6em;

            position: absolute;
            left: 0;
            right: 0;
            top: 0;
            z-index: -1;
            background: linear-gradient(rgba($body-bg, 1) 0%, rgba($body-bg, 0.5) 60%, rgba($body-bg, 0) 100%);
        }
    }
}

.project-page .header__menu-list:after {
    content: none;
}

.header__menu-list--invisible {
    opacity: 0;
}

.header__bar-icon {
    display: block;
    width: 0.9em;
    height: 1px;
    margin-bottom: 0.25em;

    background-color: $black;

    transform-origin: 50% 50%;
    transition: transform $transition-duration, opacity $transition-duration;
}

.header__bar__toggle {
    position: absolute;
    right: $spacer;
    top: $spacer / 2;

    @include media-breakpoint-up(sm) {
        position: static;
    }
}

.header__bar__toggle:hover,
.header__bar__toggle[aria-expanded="true"] {
    .header__bar-icon--first {
        transform: translateY(10px) rotateZ(-45deg);
    }

    .header__bar-icon--second {
        opacity: 0;
    }

    .header__bar-icon--third {
        transform: translateY(-4px) rotateZ(45deg);
    }
}

